@@ -4,6 +4,7 @@ Hash: SHA256
 AUX all-gentoo-1.js 957 SHA256 9a0a0f220719bfa7e03b9cb3a5ccdbc9c5d43f75b443eceed65a8f3cb43b21d5 SHA512 8280531443787d26ef482b1f4ddf33278884a35554ceec09877868f96350dce521119d300bdafa80bc529e99ce0cc597d06c2bc6b43d978a8035dedb7734c821 WHIRLPOOL ec20b2d7903200a7956c67e569d9906d1b252620c73eeb4162b655a3dd3e2c750d69f028fd1706adb560d76ca60487b656fe1de4dc910240a91fabc4f9afe395
 AUX icon/seamonkey.desktop 288 SHA256 524ae39ffc10b2a950aa344ae6c3f3d9b4a21009697edfd52ec47aa850d795d0 SHA512 de41924fefe72217c93e42cd907a285d6ce878b3713b2b7e63cb3658bb6a7d83b57753a2911824b139820b7a84d03d89f89d7f79f28d32a4148a4916e779c686 WHIRLPOOL 6aac82b2104c32d7ab8831d760f641badc8705a4711d71bccb25064391d1120217b212ea0009eb145948d61f341b94e57896d5c8c99a90a72312cbebff26f85f
 AUX seamonkey-freetype251.patch 1456 SHA256 db890189bd3594b7ce56741810f0ae68e3b9ba7d971a767cde889fd7c5e327a0 SHA512 71c9f07b66a8169572aeaf04b201e5d9b2406aa248c9d92f1e0ce876366ccd36f7f4843e226fad2bad2873ed4f115ef9effe3ac0140343c98fc9c1918037c872 WHIRLPOOL 3e5d9b0789d620eb31c16b2780650f90c4f55ed429d26c9264f3cd1e016fb82720cef623c881842bb43a54fa7397a0a58a9ab23ba5576c190504927b67886094
+DIST enigmail-1.6.1_pre20140112.tar.xz 916028 SHA256 2d89a9186c3ccfc9397c933c6f63c0518224fea0096d7a292dba3765de088149 SHA512 e05d9fcb2dd333cdca487d59a31bf045a568762e6a961267209bb4b5c8b6a0fc5ef8096b970302bc7bac9bc7f963d4a2d3c1d68326c4c18c7e93eb63308b0675 WHIRLPOOL 7a5d6366737fe239b00bcc8d805e6904fd5f9bd9724adbc0ab0f7752ec6f1b8d0bc961c250f8d51366265d685a1c66a3efcb86a23ebbde36152588bac97f576f
 DIST enigmail-1.6.tar.gz 1231111 SHA256 10d5eb7ba364b9b6e6275aae8bba1d0e4321ed7d55a715337d566ccf2a56ea4d SHA512 877ca75a0ed1538f156307dc181ce8808deb96f58250d26d4d2c1f474d637959347c2305cb3b8f92f12d3ebd95bfa9d4d35aaaa1f4670728f205be7ae76852b8 WHIRLPOOL 91a11a81cc7b4c05c4a0a320284bc362b13f6aecb4fb20b04f38080bffbc5b94ab1913cf7e2d4480a452a916fd0d4297830ce0ba36867c7418b11deb1e060b06
 DIST firefox-25.0-patches-0.3.tar.xz 8904 SHA256 57f19551fa52e74d253fad9fa4980e00ee152fb1e4b893772303334441da02ce SHA512 211b7e9d0d858b94ab292bd0aa1ca8392d8319646dff7dc47e6048de311898f74c27843651e8c6152b6541f6918ddb0a34fd2bf2445cb48ac6463638c265db42 WHIRLPOOL 98eb119aa3966af647d332583b0de3dcc997d6429542e3c8ab6bc263e368416c0785b76b472c6bfcbb91cda56f985b857b8b3802e5cc10a106bd57b4ba967b36
 DIST firefox-26.0-patches-0.3.tar.xz 4796 SHA256 b1e80226341c66bba9708a1584247992dd2120fd0e9aac3066ed9e8e8a0aebcb SHA512 f8bcdc145597c456406481de3d621f2ea7bba1457db002070c72fb1c3cf4716c1e4ee5e98f437203434b09705436860a64e2637c4a765d79ec00abd04ecc5cc5 WHIRLPOOL a6e41a84f0bedd80ac1bc2e305c6f5f8445c5bfb04ed9a858d819c5f73b971dbd9da976f6b293773e786975a4c830c1c39e91a38f2955ca3a278f0c2f8c554d5
@@ -62,23 +63,23 @@ DIST seamonkey-2.23-zh-CN.xpi 812656 SHA256 3e0fde7598a7d1235aa90afc906fb15476ae
 DIST seamonkey-2.23-zh-TW.xpi 835163 SHA256 29cf5d2e5ed79f1b1c4e974da17bd24f8d4432ead064f75661738b6633c80289 SHA512 6d2bb3a720876b10c067762c9c288112b5f2b128ea733f413b9a11d6bf39ec0c43c999c5f6a397936bbef2d951a88841f69b27009f9fa4846c4aa003cd3f52cb WHIRLPOOL 9341a43fd2946e11dbf81415da4e9aa79044215fe8cc3bfd1eff81217fd8ab9c8fdf8510f64e3acc048d1ac3e42fad1b04f0574f3e93d8e54b585a9c9889257a
 DIST seamonkey-2.23.source.tar.bz2 148268011 SHA256 45f8fd527981148ad96bc5d90eea6eb76d83f1e1b87262122ec4928127f01de1 SHA512 5ed75d94221d07c0e9370bbbcc2fa23f6233ea4acb956ab9e421a53d34fda5469aa26ed571d212505b61e6b1994f9af21bb09101c4293be3e607c3d229e11368 WHIRLPOOL bccf59774c38f0f93c84240ae992caf974145e197ccfe0240c68678656f33bdc0d5cf92d67cea751bb2247ce045f8c4e82a1009e8d15a6658e8c569534439fb1
 EBUILD seamonkey-2.22.1.ebuild 10969 SHA256 ceb413ed7d37eb32652727a5ef5821e4ca2a03c03dfd8a9e8d59dad64ed3b345 SHA512 d21e81f2ee63642db7af4bbcad700900904b967c00a120e13690fa1825cb763126334521f516506e6fb5ca9e53512ec2cd754def0aa34acf868ddc56f5348ac5 WHIRLPOOL e2ab704c0f0399736fd2be2bf90ea932183cebbc05e7b7737999c624e95a23dc3e10fa788a4318476adf56c68fba19c75f346e5c2755710951d49ed7d24090f2
-EBUILD seamonkey-2.23.ebuild 10923 SHA256 65ff6a469bacf16e545996d31474101c70e950687c55c421a75abf4fb005375b SHA512 31f530b00c64a8937ea762877240e01f1132ee3200f9108cf87c5dfda3a34305287a9b1a171d8bccc587c3de18379547e3b1fcdde6e49caba1f2195381740d70 WHIRLPOOL da5e3450b65116f662ba03c3be9ff9bf98531aaef0d3877ae96afd6e8c1450c40dd057e0d4cac09315700d8f75566f13bda022387d39a7f11b759ed1acd21f1c
-MISC ChangeLog 66489 SHA256 42d53cfde38759f500d3727235780c08f17416ff4641db371caba145cd68748b SHA512 0c51ae9a51072018123f48b3f5dec655befc1319ad0c3622a3b3ee30db0df775f6bcd23755ebd9bb08303bafcb8df292017ff1da31cbd4233f1b528ed353500c WHIRLPOOL d93b2a38db43155d76f7e7224c80af0fccf4764d0f1c086f991afc52bcf2ec5c27332dc33b6a75d49b4f16c79b63cce52c812e0811aff500223da230c2a57c1b
+EBUILD seamonkey-2.23.ebuild 11087 SHA256 2b01a8ce64ea61c4bbdc4f91cb945e1d44d9a8b0262b1c82bedd4d286bec573e SHA512 2f8b229d722d6618734e28f1f0f6319767d02abdd0d90d6c561a5d4db8317d480f99f3ec32d768377eb57efb01884fa51574dbfa7d82506e7acd82abdc5992b2 WHIRLPOOL d0d38038a865ee38e83903c9e58fdd611631d0aaff7cebda9a3b6a5ef90efae315d822ac42e63b93f5d95298cdcda05b32de91595388f235344a23ffeca559cb
+MISC ChangeLog 66645 SHA256 bb75ada8444ae2f56614221f3fa56702b4b85fae12c440e1b3f86d8f62daa594 SHA512 641c23372414359f8ffadc30f11dc867f54738793d0ab6ed606d45f21b51b27d7db2a02113beab859ff3eca259a4f35b8f66ffc7f571d71a9bf2210dc12ac530 WHIRLPOOL 894ddaca722ebca1dc5702c2974ccd3f705ef3b68ee24151635a3088af58ce7eaea27dfc0f703c5223128a3072e45528ced4de0d5419b6a703d8ca024e797a62
 MISC metadata.xml 1150 SHA256 e2b3058fe80774c23249d0568ec2e23c7c22420bc6a04b62df3df782d18ebb16 SHA512 102f34a51a61b9c2d16a4eb20d851fe9fced45a20b50c8ba7d6774088c07301bb466dcec9a99e813bb1b0981c0f84267dc605fe2ff78b3be10f8eac67c509197 WHIRLPOOL f75bad13f4c3fa6de0c770022c4fa1519423d51d754cac03452867f7817627207a48e71688154e03b5f3015185b8d0a7d37ed8abbb229e71e2d9e17360ebe63e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJSwvmAAAoJEPiazRVxLXTF3FYP/0tBfcb//jOCouVVlbOmenFM
-zMo+2wBlLfFKVHh6JaKX4w08tCYKO3PRrPTDAA87Y+vTD3TQ+Z958BdvDHf7i7nd
-ruq61fzzbaTxxFsnlBqUv9rumRa77N6kaemA78iTX4eU/BzA6f/GjZbEhxmxUCNt
-eR6SCgvUmBYY/EbMUuLe8TF48kroJSuNe5uvDXk5lbJ/nKtMCu88DFFym88mXGmL
-hvWMQZLvPQ8icYvFAJ+1h23KoA9ap4BodzqVZ/sNfi+JEBA7Mm6h5EKaGmN6K5hg
-PaHg82MD1nrbAwVrU/hh5zvpAfjnrvGbr/ioaH875KNsLrURplQKEGwfZeDrAH2h
-QWmvNRCrUlOLZA9+5yrlxwUbDVHANQ6sqtpJRHi++ImJ7i2q4eMIWqUJaLbxqSpe
-1jaNexGNIFdcH9JeYa1al4eg8+R4pBHw80/cn3pobVffksfISVj+rrwcoFa5wBe5
-9jMKdFkFnXCJsoQigsHP9JkVX5rSC/DKciZtKO/mbuOfYyMeSd7nXQZhh7s4RzXL
-D3tCHW3VqulzhRFYBpKj/18Q5rnEuwBrHFkuY06ZuXcGucPzmx0utV8D8WFtOr9S
-vGFZ77+CChWqqNNMP+ipvIhUIp9dnGsOS+glJJz2wRqyRYxXvPKnCgtsZpml+ZXd
-8tWYk7i5ROXifBsXNX/u
-=gFdV
+iQIcBAEBCAAGBQJS1CKvAAoJEPiazRVxLXTFzC0P/1A+LFH9epjmOCsvppWztPe0
+YS76/wzxnfBajq44NkKAjQr21u93owX35QgS+abOiT7sB7SXMOYeOALFHFpam7js
+cieplNSOu07RqNtKuN7uLXQOVPRNft22/xhVn6pNfN17ICfljAh5oTCvik6rMeCT
+CNBNV8DhN8RMHBlO4eid1IP7KYpLo5ycq43SUGjoA5gi6rnLRrntEHmuDYXzcszd
+IL9iKf+6KiTcXsK5pcQ3BTswImlhbOfXZ8oyLrjkQL5zg6BG+FnDfKYiOUEIJx/J
+O9FSPjwUAwWpeXC7U0bxpFuloQ1fQzv9sTIbXvxlhwuGBETlO0v+bX8FjnskKZG9
+pZFjSU/4edczfhV55U0r46CAV/eMRjVrJqHaT/uGFPUIwFs+z5I5RNrTbjF7wsOP
+O2qKiPdz15+WBnPc2VYZIfC2awBCwrs95iw+VwURrzhmYR1btUL5/3LCjTTL40tm
+UVGFI2UdqlZqDB9s18UF0+taUo/J9n7PGFa1IcfyhJg4ZW6hdg/LV7346Hy3LTn8
+IFcJ/3U/EXLLUJgP5J/FDcBQHf/BKZBdQo86ZI9oi18zaY1cI6guKoiNJvYVCLv6
+Fwt3dDVXunyJ+yjUU6QxF3FnBrWPP3+EDPgDeIXfJm0S1V1OmPo6NXE6uVEiCmfh
+EdRkvwMuVruQ9KjvAiTG
+=lm6u
 -----END PGP SIGNATURE-----
