@@ -1,6 +1,9 @@
 # ChangeLog for www-client/seamonkey
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/seamonkey/ChangeLog,v 1.475 2013/12/31 17:06:07 polynomial-c Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/www-client/seamonkey/ChangeLog,v 1.476 2014/01/13 17:30:22 polynomial-c Exp $
+
+  13 Jan 2014; Lars Wendler <polynomial-c@gentoo.org> seamonkey-2.23.ebuild:
+  Added enigmail snapshot with new build system. This should fix bug #494088.
 
   31 Dec 2013; Lars Wendler <polynomial-c@gentoo.org> seamonkey-2.22.1.ebuild,
   +files/seamonkey-freetype251.patch:
